[package]
name = "rza1l-hal"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
# Unit tests (in #[cfg(all(test, not(target_os="none")))]) run natively via
# `cargo test` (host target). They cannot compile for armv7a-none-eabihf
# because the `test` crate requires std.
test = false

[target.'cfg(target_os = "none")'.dependencies]
cortex-ar = { workspace = true, features = ["critical-section-single-core"] }

[dependencies]
critical-section = { workspace = true }
embassy-sync = { workspace = true }
linked_list_allocator = { version = "0.10", default-features = false }
embassy-time = { workspace = true }
embassy-time-driver = { workspace = true }
embassy-time-queue-utils = { workspace = true }
embassy-usb-driver = { workspace = true }
embedded-hal = "1"
embedded-hal-async = "1"
embedded-io-async = "0.7"
log = { workspace = true }

[features]
rtt = ["dep:rtt-target"]

[dependencies.rtt-target]
workspace = true
optional = true

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
critical-section = { workspace = true, features = ["std"] }


