[package]
name = "rza1l-hal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Embassy HAL for the Renesas RZ/A1L (ARM Cortex-A9, R7S721001)."
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["rza1", "renesas", "cortex-a9", "embassy", "hal"]

# docs.rs builds on the x86_64 host by default; the bare-metal driver code only
# compiles for the device triple, so build the docs there.
[package.metadata.docs.rs]
default-target = "armv7a-none-eabihf"

[lib]
# Unit tests (in #[cfg(all(test, not(target_os="none")))]) run natively via
# `cargo test` (host target). They cannot compile for armv7a-none-eabihf
# because the `test` crate requires std.
test = false

[target.'cfg(target_os = "none")'.dependencies]
cortex-ar = { workspace = true, features = ["critical-section-single-core"] }

[dependencies]
critical-section = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-time-driver = { workspace = true }
embassy-time-queue-utils = { workspace = true }
embassy-usb-driver = { workspace = true }
embedded-hal = "1"
embedded-hal-async = "1"
embedded-io-async = "0.7"
log = { workspace = true }

[features]
rtt = ["dep:rtt-target"]
unlock-bootloader = []

[dependencies.rtt-target]
workspace = true
optional = true

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
critical-section = { workspace = true, features = ["std"] }


