[package]
publish = false  # binary crate — not for crates.io
name = "audio_passthru"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Deluge SDK example: a line-in audio effect (gain + soft-clip)."

[[bin]]
name = "audio_passthru"
test = false

[dependencies]
deluge = { path = "../../crates/deluge-sdk", package = "deluge-sdk" }
embassy-executor = { workspace = true, features = [
    "nightly",
    "platform-cortex-ar",
    "executor-thread",
] }

[features]
default = []
## Opt-in RTT (SEGGER) logging over a debug probe.
rtt = ["deluge/rtt"]
