[package]
name = "input_demo"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Deluge SDK example: react to the unified input event stream."

[[bin]]
name = "input_demo"
test = false

[dependencies]
deluge = { path = "../../deluge" }
embassy-executor = { workspace = true, features = [
    "nightly",
    "platform-cortex-ar",
    "executor-thread",
] }

[features]
## Default to RTT so this binary reserves the RTT region. The workspace
## shares one `deluge` rlib; because another member enables `deluge/rtt`,
## feature unification compiles the RTT logger in, so every binary must pick
## the matching rtt linker script (build.rs keys off this feature).
default = ["rtt"]
rtt = ["deluge/rtt"]
