[package]
publish = false  # binary crate — not for crates.io
name = "input_demo"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Deluge SDK example: react to the unified input event stream."

[[bin]]
name = "input_demo"
test = false

[dependencies]
deluge = { path = "../../crates/deluge-sdk", package = "deluge-sdk" }

[features]
default = []
## Opt-in RTT (SEGGER) logging over a debug probe.
rtt = ["deluge/rtt"]
